--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+/*.list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}*/
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -32,6 +38,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
